my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EAPPLY/EAPPLY.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAPPLY.dml:12:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAPPLY.dml:15:9: error EAPPLY: illegal function application of 'p'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAPPLY.dml:15:9:   type: port object
